--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 
 \.pytest_cache/
 
+\.vscode
+\.coverage
+*\.db
+
 _venv/
 
 src/libgs\.egg-info/
@@ -14,3 +18,5 @@ docs/build/
 *.pyc
 
 *_pycache*
+
+_autosummary/
